# unitree_sonic_g1

./: .gitignore  DEEPLAKE_TRAINING_GUIDE.md  LICENSE  MAC_DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  UBUNTU_DEPLOYMENT.md  advanced_training.py  bc_warmstart.py  benchmark_inference.py  check_ubuntu_compatibility.py  compare_checkpoints.py  convert_deeplake_to_csv.py  create_and_load_dataset.py  deeplake_table_loader.py  enhanced_humanoid.xml  enhanced_transformer_policy.py  evaluate.py  evaluate_policy.py  evaluate_robustness.py  export_model.py  export_table_to_dataset.py  final_enhanced_training.py  final_model_evaluation.py  finetune_policy.py  finetune_residual.py  load_deeplake_data.py  mac_optimized_training.py  mac_visual_demo.py  mjpython_test.py  model_evaluation.py  mujoco_demo.py  mujoco_interface.py  mujoco_mac_demo.py  mujoco_online_control.js  pyproject.toml  quick_mac_test.py  realtime_loop.py  requirements.txt  setup.py  (+21 more)
configs/data/: deeplake.yaml  retarget_g1.yaml  retargeting.yaml
configs/envs/: g1_full_featured.yaml  g1_minimal.yaml  g1_simulation.yaml
configs/eval/: g1_evaluation.yaml  rollout_eval.yaml
configs/evaluation/: eval_config.yaml
configs/finetune/: robust_g1.yaml
configs/imitation/: base_g1.yaml
configs/models/: transformer_policy.yaml
configs/robot/: g1.yaml
configs/train/: bc.yaml  bc_deeplake.yaml  ppo_imitation.yaml
configs/training/: bc_warmstart.yaml  finetune_residual.yaml  ppo_imitation.yaml
data/: lightwheel_bevorg_frames.csv
docs/: architecture.md  g1_tuning_guide.md  retargeting_guide.md
examples/: bc_warmstart_example.py  retargeting_pipeline_example.py  test_g1_environment.py
final_evaluation_results/: final_evaluation_results.json
scripts/: evaluate_policy.py  export_onnx.py  realtime_loop.py  retarget_to_g1.py  train_bc.py  train_imitation.py
sonic_g1/: __init__.py
sonic_g1/data/: __init__.py  bc_dataset.py  state_action_extractor.py
sonic_g1/deploy/: __init__.py  export.py  hardware.py  inference.py  safety.py
sonic_g1/deployment/: export.py
sonic_g1/envs/: __init__.py  robust_env.py
sonic_g1/eval/: __init__.py  metrics.py  test_suites.py  video.py
sonic_g1/models/: __init__.py  critic.py  policy.py
sonic_g1/train/: __init__.py  bc_losses.py  ppo.py  rollout_buffer.py
sonic_g1/utils/: __init__.py
src/core/: __init__.py  config.py  logging.py  utils.py
src/data/: __init__.py  contact_estimation.py  normalization.py  retarget_to_g1.py  skeleton_map.py  validate_retargeting.py
src/envs/: __init__.py  g1_env.py  motion_imitation.py  robust_training.py
src/envs/g1/: README.md  __init__.py  commands.py  g1_env.py  observations.py  randomization.py  resets.py  rewards.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/hardware/: __init__.py  safety_filter.py
src/models/: __init__.py  transformer_policy.py
src/training/: __init__.py  bc_trainer.py  data_loader.py  deeplake_loader.py
src/utils/: __init__.py  export_model.py
